--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/TitleMain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Monninkeräyspeli"
+        android:text="LutemonFighter"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -25,6 +25,8 @@
         android:layout_width="140dp"
         android:layout_height="60dp"
         android:layout_marginTop="64dp"
+        android:backgroundTint="#673AB7"
+        android:onClick="switchToNewGame"
         android:text="Uusi peli"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,7 +38,9 @@
         android:layout_width="140dp"
         android:layout_height="60dp"
         android:layout_marginTop="16dp"
+        android:backgroundTint="#F44336"
         android:text="Lataa peli"
+        android:textAllCaps="false"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,6 +51,7 @@
         android:layout_width="140dp"
         android:layout_height="60dp"
         android:layout_marginTop="16dp"
+        android:backgroundTint="#F44336"
         android:text="Asetukset"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -57,6 +62,7 @@
         android:id="@+id/CreditsButton"
         android:layout_width="140dp"
         android:layout_height="60dp"
+        android:backgroundTint="#F44336"
         android:text="Tekijätiedot"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
