--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,9 +25,10 @@
         android:layout_width="140dp"
         android:layout_height="60dp"
         android:layout_marginTop="64dp"
-        android:backgroundTint="#673AB7"
+        android:backgroundTint="#2196F3"
         android:onClick="switchToNewGame"
         android:text="Uusi peli"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,11 +37,12 @@
     <Button
         android:id="@+id/LoadGameButton"
         android:layout_width="140dp"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#F44336"
-        android:text="Lataa peli"
+        android:backgroundTint="#B3DAFA"
+        android:text="Lataa peli\n(tulossa)"
         android:textAllCaps="false"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,10 +51,11 @@
     <Button
         android:id="@+id/SettingsButton"
         android:layout_width="140dp"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#F44336"
-        android:text="Asetukset"
+        android:backgroundTint="#B3DAFA"
+        android:text="Asetukset\n(tulossa)"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,8 +65,10 @@
         android:id="@+id/CreditsButton"
         android:layout_width="140dp"
         android:layout_height="60dp"
-        android:backgroundTint="#F44336"
+        android:backgroundTint="#2196F3"
+        android:onClick="switchToCredit"
         android:text="Tekijätiedot"
+        android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
